--- a/slides/03_evaporation.qmd
+++ b/slides/03_evaporation.qmd
@@ -40,9 +40,9 @@
     .container width:{50%}
 
         .box{Definition} background:{rgb(200, 200, 205)}
-            Transfer of liquid water into gasious state into the atmosphere
+            Transfer of liquid water into gaseous state into the atmosphere
 
-        Evaportation's importance is mainly affected by two factors:
+        evaporation's importance is mainly affected by two factors:
         - The amount of available energy
         - Available water
 
@@ -53,18 +53,18 @@
 
     .container width:{50%}
         !(70%)[Evaporation](image/internet_evaporation.jpg)\
-        _Available water and energy control  the main controling factors_
+        _Available water and energy control  the main controlling factors_
 
 
-# Different Definitions of Evaportaion
+# Different Definitions of Evaporation
 .row gap:{1cm}
     .container width:{50%}
-        .box title:{Evaportaion} background:{.lightblue}
-            - **Open water Evaporation**, $ E_O $: Evaportation above a
+        .box title:{Evaporation} background:{.lightblue}
+            - **Open water Evaporation**, $ E_O $: Evaporation above a
             body of water such as lakes, streams, oceans. As can be see in
             global water cycle figure, largest source of evaporation.
-            - **Potential Evaporation**, $ E_{pt} $ : Amount of evaportation above land if there was unlimited water.
-            - **Total Evaportation**, $ B_t $:  This is the actual evaportation. Wet seasons: $ E_t \approx E_{pt} $
+            - **Potential Evaporation**, $ E_{pt} $ : Amount of evaporation above land if there was unlimited water.
+            - **Total Evaporation**, $ B_t $:  This is the actual evaporation. Wet seasons: $ E_t \approx E_{pt} $
 
         .align{center}
             We are mostly interested in $ E_O $ and $ E_t $, but $ E_{pt} $ gives us a good indicator of what $ E_t $ might be.
@@ -84,8 +84,8 @@
 .row gap:{1cm}
     .container width:{50%}
         Transpiration is the result of photosynthesis and respiration in the plants.
-        - It is controled by the ability of the leafs in openning or closing of the leafs stomata in response to vapour pressure difference.
-        - It is further control by amount of water, the soild, the ability of plants to tranfer water to the leaves.
+        - It is controlled by the ability of the leafs in opening or closing of the leafs stomata in response to vapour pressure difference.
+        - It is further control by amount of water, the solid, the ability of plants to transfer water to the leaves.
 
     .container width:{50%}
         .box type:{warning} background:{.lightblue}
@@ -103,11 +103,11 @@
 
         **Where:**
         - $ E $ — Evaporation rate.
-        - $ e_x $ — Vapor pressure at the water surface.
-        - $ eₐ $ — Vapor pressure of the surrounding air.
+        - $ e_x $ — Vapour pressure at the water surface.
+        - $ eₐ $ — Vapour pressure of the surrounding air.
         - $ C $ — Empirical constant (depends on wind, temperature, etc.).
 
-        **Key Idea**: Evaporation increases with the difference in vapor pressure between the water surface and the air.
+        **Key Idea**: Evaporation increases with the difference in vapour pressure between the water surface and the air.
 
     .container width:{30%}
         !(100%)[John Dalton](image/internet_JohnDalton.jpg)
@@ -146,8 +146,8 @@
     .container width:{50%} alignment:{center}
         - Over the **oceans**, water supply is effectively unlimited, making evaporation a major component of the hydrological cycle.
         - On **land**, water availability varies:
-            - **Open water evaporation** ($ E_o $) occurs from lakes, rivers, ponds
-            - **Soil evaporation** is more complex and limite
+            - **Open water evaporation** ($ E_o $) occurs from lakes, rivers, ponds.
+            - **Soil evaporation** is more complex and limited by water availability.
     .container width:{50%}
         - In soils:
             - Water evaporates from the **near surface**
@@ -239,7 +239,7 @@
     - Many methods estimate evaporation **indirectly** via:
       - Energy balance
       - Water balance
-      - Micrometeorological measurements
+      - Micro-meteorological measurements
     - All methods make assumptions about **fluxes and gradients**
 
   .container width:{60%}
